{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 66,
  "lineage": "029f2c60-4621-301b-4c9e-212e8057c74e",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:network-acl/acl-0ac2199c03648b437",
            "default_network_acl_id": "acl-0ac2199c03648b437",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ac2199c03648b437",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "502405122856",
            "subnet_ids": [],
            "tags": {
              "Name": "workshop-vpc-default"
            },
            "tags_all": {
              "Name": "workshop-vpc-default"
            },
            "vpc_id": "vpc-07f851b212485493d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:route-table/rtb-09817e95f20ecd517",
            "default_route_table_id": "rtb-09817e95f20ecd517",
            "id": "rtb-09817e95f20ecd517",
            "owner_id": "502405122856",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "workshop-vpc-default"
            },
            "tags_all": {
              "Name": "workshop-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07f851b212485493d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:security-group/sg-0edee5f121f70a675",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0edee5f121f70a675",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "502405122856",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "workshop-vpc-default"
            },
            "tags_all": {
              "Name": "workshop-vpc-default"
            },
            "vpc_id": "vpc-07f851b212485493d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c4b778d882cfd33",
            "domain": "vpc",
            "id": "eipalloc-07c4b778d882cfd33",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-141-95-168.us-east-2.compute.amazonaws.com",
            "public_ip": "3.141.95.168",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "workshop-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "workshop-vpc-us-east-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dedfc070fd3ac6ca",
            "domain": "vpc",
            "id": "eipalloc-0dedfc070fd3ac6ca",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-132-70-160.us-east-2.compute.amazonaws.com",
            "public_ip": "3.132.70.160",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "workshop-vpc-us-east-2b"
            },
            "tags_all": {
              "Name": "workshop-vpc-us-east-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f737a1476b225cf",
            "domain": "vpc",
            "id": "eipalloc-04f737a1476b225cf",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-117-0-53.us-east-2.compute.amazonaws.com",
            "public_ip": "18.117.0.53",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "workshop-vpc-us-east-2c"
            },
            "tags_all": {
              "Name": "workshop-vpc-us-east-2c"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:internet-gateway/igw-0872ba7b0c204dbed",
            "id": "igw-0872ba7b0c204dbed",
            "owner_id": "502405122856",
            "tags": {
              "Name": "workshop-vpc"
            },
            "tags_all": {
              "Name": "workshop-vpc"
            },
            "vpc_id": "vpc-07f851b212485493d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07c4b778d882cfd33",
            "association_id": "eipassoc-0f873d829ce6517d9",
            "connectivity_type": "public",
            "id": "nat-0e94adb48f29fcf17",
            "network_interface_id": "eni-07ec9f3e5763739df",
            "private_ip": "10.0.101.188",
            "public_ip": "3.141.95.168",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-018eaa7653d1cf1ba",
            "tags": {
              "Name": "workshop-vpc-us-east-2a"
            },
            "tags_all": {
              "Name": "workshop-vpc-us-east-2a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dedfc070fd3ac6ca",
            "association_id": "eipassoc-06b722f43d2aceaba",
            "connectivity_type": "public",
            "id": "nat-088710d079d4ee8a5",
            "network_interface_id": "eni-05f676a1db8378752",
            "private_ip": "10.0.102.161",
            "public_ip": "3.132.70.160",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-035b233e8b4cdfe69",
            "tags": {
              "Name": "workshop-vpc-us-east-2b"
            },
            "tags_all": {
              "Name": "workshop-vpc-us-east-2b"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f737a1476b225cf",
            "association_id": "eipassoc-032c71b3e535624f1",
            "connectivity_type": "public",
            "id": "nat-0917273ce8390a2cc",
            "network_interface_id": "eni-0f04bd38ad28d22be",
            "private_ip": "10.0.103.204",
            "public_ip": "18.117.0.53",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ec59fb4254af46cc",
            "tags": {
              "Name": "workshop-vpc-us-east-2c"
            },
            "tags_all": {
              "Name": "workshop-vpc-us-east-2c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e2c9d8d392a794f81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e94adb48f29fcf17",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e2c9d8d392a794f8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-028fcdc93263726b21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-088710d079d4ee8a5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-028fcdc93263726b2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04cb1ae9ffd1607541080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0917273ce8390a2cc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04cb1ae9ffd160754",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0872ba7b0c204dbed",
            "id": "r-rtb-0250d584114c36e951080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0250d584114c36e95",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:route-table/rtb-0e2c9d8d392a794f8",
            "id": "rtb-0e2c9d8d392a794f8",
            "owner_id": "502405122856",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "workshop-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "workshop-vpc-private-us-east-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f851b212485493d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:route-table/rtb-028fcdc93263726b2",
            "id": "rtb-028fcdc93263726b2",
            "owner_id": "502405122856",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "workshop-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "workshop-vpc-private-us-east-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f851b212485493d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:route-table/rtb-04cb1ae9ffd160754",
            "id": "rtb-04cb1ae9ffd160754",
            "owner_id": "502405122856",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "workshop-vpc-private-us-east-2c"
            },
            "tags_all": {
              "Name": "workshop-vpc-private-us-east-2c"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f851b212485493d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:route-table/rtb-0250d584114c36e95",
            "id": "rtb-0250d584114c36e95",
            "owner_id": "502405122856",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0872ba7b0c204dbed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "workshop-vpc-public"
            },
            "tags_all": {
              "Name": "workshop-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f851b212485493d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0081aa325ec711700",
            "route_table_id": "rtb-0e2c9d8d392a794f8",
            "subnet_id": "subnet-0879c0efc5b01eb74"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0167f2966a79139a3",
            "route_table_id": "rtb-028fcdc93263726b2",
            "subnet_id": "subnet-0574cd5a2b21bbb37"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06752d3722a7cdc86",
            "route_table_id": "rtb-04cb1ae9ffd160754",
            "subnet_id": "subnet-0cdb481056acbac55"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f828ff36318cac2",
            "route_table_id": "rtb-0250d584114c36e95",
            "subnet_id": "subnet-018eaa7653d1cf1ba"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b1af3244e09a8b9",
            "route_table_id": "rtb-0250d584114c36e95",
            "subnet_id": "subnet-035b233e8b4cdfe69"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004ea33d6b4f13ae1",
            "route_table_id": "rtb-0250d584114c36e95",
            "subnet_id": "subnet-0ec59fb4254af46cc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:subnet/subnet-0879c0efc5b01eb74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0879c0efc5b01eb74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502405122856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop-vpc-private-us-east-2a"
            },
            "tags_all": {
              "Name": "workshop-vpc-private-us-east-2a"
            },
            "vpc_id": "vpc-07f851b212485493d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:subnet/subnet-0574cd5a2b21bbb37",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0574cd5a2b21bbb37",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502405122856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop-vpc-private-us-east-2b"
            },
            "tags_all": {
              "Name": "workshop-vpc-private-us-east-2b"
            },
            "vpc_id": "vpc-07f851b212485493d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:subnet/subnet-0cdb481056acbac55",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdb481056acbac55",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502405122856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop-vpc-private-us-east-2c"
            },
            "tags_all": {
              "Name": "workshop-vpc-private-us-east-2c"
            },
            "vpc_id": "vpc-07f851b212485493d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:subnet/subnet-018eaa7653d1cf1ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018eaa7653d1cf1ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502405122856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop-vpc-public-us-east-2a"
            },
            "tags_all": {
              "Name": "workshop-vpc-public-us-east-2a"
            },
            "vpc_id": "vpc-07f851b212485493d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:subnet/subnet-035b233e8b4cdfe69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035b233e8b4cdfe69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502405122856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop-vpc-public-us-east-2b"
            },
            "tags_all": {
              "Name": "workshop-vpc-public-us-east-2b"
            },
            "vpc_id": "vpc-07f851b212485493d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:subnet/subnet-0ec59fb4254af46cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec59fb4254af46cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "502405122856",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workshop-vpc-public-us-east-2c"
            },
            "tags_all": {
              "Name": "workshop-vpc-public-us-east-2c"
            },
            "vpc_id": "vpc-07f851b212485493d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:502405122856:vpc/vpc-07f851b212485493d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ac2199c03648b437",
            "default_route_table_id": "rtb-09817e95f20ecd517",
            "default_security_group_id": "sg-0edee5f121f70a675",
            "dhcp_options_id": "dopt-07284fea15f74598b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f851b212485493d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09817e95f20ecd517",
            "owner_id": "502405122856",
            "tags": {
              "Name": "workshop-vpc"
            },
            "tags_all": {
              "Name": "workshop-vpc"
            }
          }
        }
      ]
    }
  ]
}